--- a/mentor_connect/src/sections/Header/Header.css
+++ b/mentor_connect/src/sections/Header/Header.css
@@ -14,8 +14,13 @@
     justify-content: space-between;
   }
   
-  .logo img {
-    width: 150px; /* Adjust size as needed */
+  .icon{
+    width:3%;
+    justify-content: center;
+    align-items: center;
+  }
+ .icon img {
+    width: 100%;
   }
   
   .search-bar input {
