--- a/mentor_connect/src/sections/Login/Login.css
+++ b/mentor_connect/src/sections/Login/Login.css
@@ -57,6 +57,7 @@
     background-color: transparent;
     border: 1px solid #ccc;
     color: #00796b;
+    margin: 5px;
     cursor: pointer;
   }
   
